--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-node_modules
+/node_modules
+
+/coverage
+
+/build
+
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+package-lock.json
